# Marble

./: .gitignore  README.md
imk/: CMakeLists.txt  README.md  main.cpp  window.cpp  window.h
imk/Config/: Custom.cfg  Default.cfg
imk/MidiApi/: Midi.cpp  Midi.h  RtMidi.cpp
imk/Utils/: calibrationData.cpp  calibrationData.h  defs.h  fileio.cpp  fileio.h  keys.cpp  keys.h
interface/: CMakeLists.txt  README.md  main.cpp
interface/AudioLib/: env.cpp  env.h  osc.cpp  osc.h
interface/Config/: Autosave.cfg  Conf.cfg
interface/Gui/: cdial.cpp  cdial.h  cslider.cpp  cslider.h  state.cpp  state.h  window.cpp  window.h
interface/MidiApi/: Midi.cpp  Midi.h
interface/Utils/: fileio.cpp  fileio.h
poly_synth/: CMakeLists.txt  main.cpp
poly_synth/AudioAPI/: AudioConstants.h  Midi.cpp  Midi.h  MidiUtils.cpp  MidiUtils.h  audio.cpp  audio.h
poly_synth/AudioLib/: AudioCollection.cpp  AudioCollection.h  AudioDesign  AudioObject.cpp  AudioObject.h  AudioOutput.cpp  AudioOutput.h  AudioPatch.cpp  AudioPatch.h  Env.cpp  Env.h  Filter.cpp  Filter.h  Mixer.cpp  Mixer.h  ModScalar.cpp  ModScalar.h  Modulator.cpp  Modulator.h  Note.cpp  Note.h  Oscs.cpp  Oscs.h  SynthChannel.cpp  SynthChannel.h  Va.cpp  Va.h  Vca.cpp  Vca.h  Voices.cpp  Voices.h  Wave.cpp  Wave.h  WaveFolder.cpp  WaveFolder.h
poly_synth/Qt/: plot.cpp  plot.h
poly_synth/Utils/: DebugUtils.cpp  DebugUtils.h  SignalUtils.cpp  SignalUtils.h  wait.h
qtTest/: CMakeLists.txt  main.cpp
qwtTest/: CMakeLists.txt  main.cpp  plot.cpp  plot.h  rtplot.cpp  rtplot.h  window.cpp  window.h
